example/kubernetes/nginx-app.yaml
# nginx-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-nginx
  labels:
    app: simple-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-nginx
  template:
    metadata:
      labels:
        app: simple-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: simple-nginx
  labels:
    app: simple-nginx
spec:
  selector:
    app: simple-nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
